--- a/packages/did-provider/package.json
+++ b/packages/did-provider/package.json
@@ -55,7 +55,7 @@
     "did-resolver": "^3.1.5",
     "dids": "^3.0.0",
     "fast-json-stable-stringify": "^2.1.0",
-    "key-did-provider-ed25519": "^2.0.0",
+    "key-did-provider-ed25519": "1.0.2",
     "key-did-resolver": "^2.0.0",
     "rpc-utils": "^0.6.1",
     "store": "^2.0.12",
